[gd_scene load_steps=2 format=3 uid="uid://drtjs7y5th6lh"]

[ext_resource type="Script" path="res://GameOnline/scripts/room.gd" id="1_a8nc6"]

[node name="Room" type="Node2D"]
script = ExtResource("1_a8nc6")

[node name="ColorRect" type="ColorRect" parent="."]
offset_right = 1016.0
offset_bottom = 100.0
color = Color(0.205117, 0.205117, 0.205117, 1)

[node name="RoomName" type="Label" parent="."]
offset_right = 40.0
offset_bottom = 23.0

[node name="NbOfUsers" type="Label" parent="."]
offset_left = 310.0
offset_top = 44.0
offset_right = 350.0
offset_bottom = 67.0

[node name="Join" type="Button" parent="."]
offset_left = 821.0
offset_top = 39.0
offset_right = 982.0
offset_bottom = 67.0
text = "Join"

[node name="Password" type="LineEdit" parent="."]
offset_left = 532.0
offset_top = 49.0
offset_right = 767.0
offset_bottom = 80.0
placeholder_text = "password"
secret = true

[connection signal="pressed" from="Join" to="." method="_on_join_pressed"]
